--- a/package.json
+++ b/package.json
@@ -2,15 +2,19 @@
   "name": "generate-types",
   "private": true,
   "scripts": {
-    "generate": "bun run src/generate-types.ts --response-fields '[\"email\"]' --request-fields '[\"email\"]'",
+    "generate": "bun run src/generate-types.ts",
     "dev": "bun --watch run src/generate-types.ts",
     "typecheck": "bun --bun tsc --noEmit"
   },
   "dependencies": {
-    "yaml": "^2.3.4"
+    "yaml": "^2.3.4",
+    "commander": "^11.1.0",
+    "chalk": "^5.3.0",
+    "inquirer": "^9.2.12"
   },
   "devDependencies": {
-    "@types/bun": "^1.2.18"
+    "@types/bun": "^1.2.18",
+    "@types/inquirer": "^9.0.8"
   },
   "peerDependencies": {
     "typescript": "^5"
