--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "private": true,
   "scripts": {
     "generate": "bun run src/generate-types.ts",
+    "simple": "bun run src/simple-generate-types.ts",
     "dev": "bun --watch run src/generate-types.ts",
     "typecheck": "bun --bun tsc --noEmit"
   },
   "dependencies": {
-    "yaml": "^2.3.4",
-    "commander": "^11.1.0",
+    "@scalar/openapi-parser": "^0.18.1",
+    "@scalar/openapi-types": "^0.3.5",
     "chalk": "^5.3.0",
+    "commander": "^11.1.0",
     "inquirer": "^9.2.12"
   },
   "devDependencies": {
